{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 11,
  "lineage": "0ab38a39-2e11-3652-4a76-8777e0722892",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:212020517509:instance/i-0538f95cbd4144765",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0538f95cbd4144765",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "NewKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cbea583ed9841a04"
              }
            ],
            "primary_network_interface_id": "eni-0cbea583ed9841a04",
            "private_dns": "ip-10-1-1-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.178",
            "public_dns": "ec2-3-226-240-162.compute-1.amazonaws.com",
            "public_ip": "3.226.240.162",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-035f85b695968d0c7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05724325a29481f84",
            "tags": {
              "Name": "Ubuntu-Server by Terraform",
              "Owner": "Ravindra Reddy Siriseni"
            },
            "tags_all": {
              "Name": "Ubuntu-Server by Terraform",
              "Owner": "Ravindra Reddy Siriseni"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08dcef7328e277f06"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "i-0538f95cbd4144765",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:212020517509:instance/i-0d917688816888b93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d917688816888b93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "NewKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cdd08b94a0835100"
              }
            ],
            "primary_network_interface_id": "eni-0cdd08b94a0835100",
            "private_dns": "ip-10-1-2-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.114",
            "public_dns": "ec2-54-175-149-162.compute-1.amazonaws.com",
            "public_ip": "54.175.149.162",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06167c8276469603a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0392a54befa70c58e",
            "tags": {
              "Name": "Ubuntu-Server1 by Terraform",
              "Owner": "Ravindra Reddy Siriseni"
            },
            "tags_all": {
              "Name": "Ubuntu-Server1 by Terraform",
              "Owner": "Ravindra Reddy Siriseni"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08dcef7328e277f06"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "i-0d917688816888b93",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Allow_all",
            "aws_subnet.subnet2_public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212020517509:internet-gateway/igw-05a8b1afeea46ed6e",
            "id": "igw-05a8b1afeea46ed6e",
            "owner_id": "212020517509",
            "region": "us-east-1",
            "tags": {
              "Name": "aws_devops_igw"
            },
            "tags_all": {
              "Name": "aws_devops_igw"
            },
            "vpc_id": "vpc-034bba85636f00fc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212020517509:route-table/rtb-001016583ed2e9d23",
            "id": "rtb-001016583ed2e9d23",
            "owner_id": "212020517509",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a8b1afeea46ed6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table"
            },
            "tags_all": {
              "Name": "Terraform_Main_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bba85636f00fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "rtb-001016583ed2e9d23",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bac0de8db86e0a52",
            "region": "us-east-1",
            "route_table_id": "rtb-001016583ed2e9d23",
            "subnet_id": "subnet-05724325a29481f84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform_public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212020517509:security-group/sg-08dcef7328e277f06",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dcef7328e277f06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow_all",
            "name_prefix": "",
            "owner_id": "212020517509",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034bba85636f00fc6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "sg-08dcef7328e277f06",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212020517509:subnet/subnet-05724325a29481f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05724325a29481f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212020517509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws_devops_subnet1"
            },
            "tags_all": {
              "Name": "aws_devops_subnet1"
            },
            "vpc_id": "vpc-034bba85636f00fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "subnet-05724325a29481f84",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212020517509:subnet/subnet-0392a54befa70c58e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0392a54befa70c58e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212020517509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws_decops_subnet2"
            },
            "tags_all": {
              "Name": "aws_decops_subnet2"
            },
            "vpc_id": "vpc-034bba85636f00fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "subnet-0392a54befa70c58e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212020517509:subnet/subnet-0d2a7e68bcc878435",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2a7e68bcc878435",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212020517509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws_devops_subnet3"
            },
            "tags_all": {
              "Name": "aws_devops_subnet3"
            },
            "vpc_id": "vpc-034bba85636f00fc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "subnet-0d2a7e68bcc878435",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:212020517509:vpc/vpc-034bba85636f00fc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01febcd77bb967efb",
            "default_route_table_id": "rtb-0a95feecf183b88ae",
            "default_security_group_id": "sg-010175eba3c185ff9",
            "dhcp_options_id": "dopt-86e5d1fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034bba85636f00fc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a95feecf183b88ae",
            "owner_id": "212020517509",
            "region": "us-east-1",
            "tags": {
              "Name": "aws_devops_tf",
              "Owner": "Ravindra Reddy Siriseni",
              "environemnt": "dev"
            },
            "tags_all": {
              "Name": "aws_devops_tf",
              "Owner": "Ravindra Reddy Siriseni",
              "environemnt": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212020517509",
            "id": "vpc-034bba85636f00fc6",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}